--- a/scss/forms/hint.scss
+++ b/scss/forms/hint.scss
@@ -5,13 +5,14 @@ label .message.hint {
 	-moz-transition: all 0.2s ease-in;
 	transition: all 0.2s ease-in;
 	opacity: 0;
+	position: static\9;
 }
 label.error .message.hint/*make sure error messages are always visible*/,
 input:focus + .message.hint {
 	opacity: 1;
 }
-.form-horizontal label .message.hint {
+.form-horizontal .message.hint {
 	line-height: 34px;
-	margin-left: 5px;
+	position: static;
 }
 /*@end hint*/
