--- a/scss/forms/inline.scss
+++ b/scss/forms/inline.scss
@@ -3,19 +3,35 @@
 .form-horizontal .label-group > div:first-child {
 	width: 130px;
 	text-align: right;
-	padding-right: 3px;
-	display: inline-block;
-	vertical-align: middle;
+	margin-right: 5px;
 }
 .form-horizontal label input,
 .form-horizontal label select,
-.form-horizontal label textarea {
-	display: inline-block;
+.form-horizontal label textarea,
+.form-horizontal .label-group label,
+.form-horizontal .inline label,
+.form-horizontal label > div:first-child,
+.form-horizontal .label-group > div:first-child,
+.form-horizontal .message,
+.help-inline .message,
+.help-inline label input{
+	float: left;
+}
+.inline label {
+	display: inline;
 }
 .form-horizontal .label-group label,
-.label-group.inline label {
-	display: inline;
+.label-group.inline label,
+.form-horizontal label > div:first-child,
+.form-horizontal .label-group > div:first-child,
+.form-horizontal .message,
+.help-inline .message {
 	line-height: $line-height*2;
+}
+.form-horizontal .message,
+.help-inline .message {
+	margin-left: 5px;
+	clear: none;
 }
 .label-group.inline label input {
 	margin-top: 0;
@@ -37,15 +53,13 @@
 	line-height: $line-height;
 }
 .form-horizontal .stacked label {
-	display: table;
+	float: none;
+	clear: both;
+}
+.form-horizontal .stacked > div:first-child {
+	line-height: $line-height;
 }
 /*@end clear */
-.form-horizontal input[type="text"],
-.form-horizontal input[type="password"],
-.form-horizontal input[type="email"],
-input[type="search"] {
-	display: inline;
-}
 .form-horizontal .label-group label input {
 	float: none;
 }
