--- a/scss/forms/pend.scss
+++ b/scss/forms/pend.scss
@@ -2,29 +2,26 @@
 .prepend,
 .append {
 	background: #f9f9f9;
-	display: inline-block;
 	border: 1px solid #cccccc;
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
 	vertical-align: top;
 	height: 28px;
 	padding: 4px 8px;
 	margin: 3px 0;
-	vertical-align: middle;
 	line-height: 19px;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
+	float: left;
 }
 .prepend {
 	border-right: none;
-	margin-right: -4px;
 }
 .prepend + input {
-	display: inline;
+	float: left;
 }
 .append {
 	border-left: none;
-	margin-left: -4px;
 }
 .prepend + input,
 .append {
